src/components/Game/Content/Content.module.scss
@import 'scss/animations.scss';

.content {
  display: grid;
  grid-template: 23.42578125rem 7.6875rem 3.625rem / minmax(10rem, 19.3125rem) 3.375rem minmax(
      22.625rem,
      55.3125rem
    );
  grid-template-areas:
    'list events graphics'
    'list video-options graphics'
    'controls video-options timeline';

  @media screen and (max-width: 1600px) and (max-height: 740px) {
    grid-template: 23.42578125rem 7.6875rem 3.625rem / minmax(10rem, 24.5rem) 3.375rem minmax(
        22.625rem,
        55.3125rem
      );
    grid-template-areas:
      'list events graphics'
      'list video-options graphics'
      'controls video-options timeline';
  }

  @media screen and (max-width: 800px) {
    display: flex;
    flex-direction: column;
  }
  @media screen and (orientation: landscape) and (max-width: 1000px) and (max-height: 800px) {
    display: flex;
    flex-direction: row;
		position: relative;
  }
}

.contentNoVideo {
  display: grid;
  grid-template: 33rem / minmax(10rem, 58.06rem) minmax(9.735rem, 19.94rem);
  grid-template-areas: 'list moments';

  @media screen and (max-width: 800px) {
    display: flex;
    flex-direction: column;
  }
  @media screen and (orientation: landscape) and (max-width: 1000px) and (max-height: 800px) {
    display: flex;
    flex-direction: column;
  }
}

.eventsArea {
  grid-area: moments;
}

.landscapeDisplayNone {
  @media screen and (orientation: landscape) and (max-width: 1000px) and (max-height: 800px) {
    display: none;
  }
}

.mobileDisplayNone {
  @media screen and (max-width: 800px),
    screen and (orientation: landscape) and (max-width: 1000px) and (max-height: 800px) {
    display: none;
  }
}

.mobilePitcherFiltersWrapper {
  @media screen and (max-width: 800px) {
    position: sticky;
    top: calc(var(--desktop-nav-height) + 56px + 100vw / 16 * 9 + var(--top-shift));
    z-index: 1;
		border-top: 0.5px solid #cdcccc;
    border-bottom: 0.5px solid #cdcccc;

    &.noVideo {
      top: calc(var(--desktop-nav-height) + 139.5px);
    }
  }
}

.mobilePitcherFilters {
  display: none;
  background-color: #f4f5f7;

  @media screen and (max-width: 800px) {
    display: flex;
    justify-content: space-between;
    align-items: center;
    height: 27px;
    padding-left: 7px;
  }
  @media screen and (orientation: landscape) and (max-width: 1000px) and (max-height: 800px) {
    display: flex;
    justify-content: space-between;
    align-items: center;
    height: 27px;
    padding: 0 7px;
    border-bottom: unset;
  }
}

.landscapeDisplayNone {
  @media screen and (orientation: landscape) and (max-width: 1000px) and (max-height: 800px) {
    display: none;
  }
}

.mobileOnlyPortrait {
  display: none;

  @media screen and (max-width: 800px) {
    display: inline-block;
  }

  @media screen and (orientation: landscape) and (max-width: 1000px) and (max-height: 800px) {
    display: none;
  }
}

.eventsWrapper {
	width: 53vw;

  li {
    flex: 1 0 33.3333%;
		max-width: 33.3333%;
  }
}

